Challenges/Module4-ScalingUpTheBusiness/Solution/SCALEUP-T002/content-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: content-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - testrvo.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: testrvo.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: web
              servicePort: 80
          - path: /content-api/(.*)
            backend:
              serviceName: api
              servicePort: 3001
          - path: /customerx/(.*)
            backend:
              serviceName: web-customerx
              servicePort: 8080
